# rusty-alert-bot

./: .gitignore  Cargo.toml  Secrets.example.toml
src/: main.rs
src/commands/: alert.rs  alert_auth.rs  mod.rs  ping.rs
