[package]
name = "rusty-alert-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
shuttle-serenity = { version = "0.35.1", default-features = false, features = ["serenity-0-12-rustls_backend"] }
shuttle-runtime = "0.35.1"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.35.1"
tokio = "1.26.0"
tracing = "0.1.37"
